bdr.BDR.scala.error
Compilation error:
BDR:2: error: type mismatch;
 found   : String("")
 required: Char
var x:Char=""
           ^BDR:5: error: not found: value getIndication
  x=getIndication();
    ^